# talaria_bibtex

./: .gitignore  Bibparse.ml  Bibtex.ml  BibtexL.mll  BibtexP.mly  BibtexT.ml  Changelog.md  LICENSE  Makefile  MicroT.ml  Readme.md  Test.ml  _oasis  _tags  descr  dune-project  microL.mll  microP.mly  opam  talaria-bibtex.opam  talaria_bibtex.opam
pkg/: META  build.ml  topkg.ml
src/: bibtex.ml  bibtex.mli  bibtex_fields.ml  bibtex_fields.mli  bibtex_lib.mldylib  dune  field_lexers.mll  field_parsers.mly  field_types.ml  field_types.mli  fields.ml  fields.mli  jbuild  lexer.mll  microP.mly  microT.ml  parser.mly  parser_aux.ml
tests/: dune  jbuild  test.bib  test.expected  test.ml
